--- a/AboutUs.html
+++ b/AboutUs.html
@@ -25,8 +25,10 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
+	<script type="text/javascript" src="sessvars.js"></script>	
+	
   </head>
-<body>
+<body onload="CheckUName()">
   <!-- Preloader -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
@@ -57,16 +59,16 @@
               <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>            
             </ul>
           </li>
-          <li><a href="Training.html">Training</a></li>  
+          <li><a href="Coaching.html">Coaching</a></li>  
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
-              <li><a href="#">Forums</a></li>
+              <li><a href="Forums.html">Forums</a></li>
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html">Log in</a></li>		  
+		  <li><a href = "LoginRegister.html" id='Login'>Log in</a></li>		  
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -201,7 +203,19 @@
   </footer>
   <!-- End footer -->
 
+  <script>
   
+  function CheckUName()
+  {
+	var curr_username = sessvars.username;
+	
+	if (curr_username != 'NotLoggedIn'){
+	
+		document.getElementById('Login').innerHTML = curr_username;
+		}
+  }
+  
+  </script>
  
   
   <!-- jQuery Library -->
