--- a/ContactUs.html
+++ b/ContactUs.html
@@ -31,7 +31,7 @@
 	
 
   </head>
-<body>
+<body onload="CheckUName()">
 			
 
   <!-- Preloader -->
@@ -64,7 +64,7 @@
               <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
             </ul>
           </li>
-          <li><a href="Training.html">Training</a></li>  
+          <li><a href="Coaching.html">Coaching</a></li>  
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -73,7 +73,7 @@
               <li class="active"><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html">Log in</a></li>		  
+		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -227,30 +227,42 @@ function WriteToFile()
 }
 </script>
 
+<script>
+	function CheckUName()
+	{
+	var curr_username = sessvars.username;
+
+	if (curr_username != 'NotLoggedIn'){
+
+		document.getElementById('Login').innerHTML = curr_username;
+		}
+	}
+</script>
   
-  <!-- jQuery Library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  
+<!-- jQuery Library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-  <!-- For content animatin  -->
-  <script src="js/wow.min.js"></script>
-  <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+<!-- For content animatin  -->
+<script src="js/wow.min.js"></script>
+<!-- bootstrap js file -->
+<script src="js/bootstrap.min.js"></script> 
 
-  <!-- superslides slider -->
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.animate-enhanced.min.js"></script>
-  <script src="js/jquery.superslides.min.js" type="text/javascript" charset="utf-8"></script>
-  <!-- slick slider js file -->
-  <script src="js/slick.min.js"></script>
-  <!-- Google map -->
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script src="js/jquery.ui.map.js"></script>
+<!-- superslides slider -->
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.animate-enhanced.min.js"></script>
+<script src="js/jquery.superslides.min.js" type="text/javascript" charset="utf-8"></script>
+<!-- slick slider js file -->
+<script src="js/slick.min.js"></script>
+<!-- Google map -->
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="js/jquery.ui.map.js"></script>
 
 
-  <!-- custom js file include -->
-  <script src="js/custom.js"></script>   
-      
-  </body>
+<!-- custom js file include -->
+<script src="js/custom.js"></script>   
+  
+</body>
   
 
 
