--- a/HomePage.html
+++ b/HomePage.html
@@ -24,10 +24,11 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> 
+	<script type="text/javascript" src="sessvars.js"></script>	
  
   </head>
-<body>
+<body onload="SetInitialUName()">
 
   <!-- Preloader -->
   <div id="preloader">
@@ -65,7 +66,7 @@
               <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
             </ul>
           </li>
-          <li><a>Training</a></li>  
+          <li><a href="Coaching.html">Coaching</a></li>  
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -74,7 +75,7 @@
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html">Log in</a></li>		  
+		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -132,7 +133,7 @@
         <div class="service_area">
           <div class="service_title">
             <hr>
-            <h2>SMART Knowledge Management System and Intelligent Coaching </h2>
+            <h2>SMART Knowledge Management System and Coaching</h2>
             <!--<p>Trusted by Fortune 500 retailers and the world’s top brands.</p>-->
           </div>
           <ul class="service_nav wow flipInX">
@@ -236,7 +237,7 @@
   </section>
   <!-- End How it works area -->
 
-  <!-- start Our Team area -->
+  <!-- start Our Team area 
   <section id="ourTeam">
     <div class="container">
       <div class="row">
@@ -401,6 +402,16 @@
     </div>
   </footer>
   <!-- End footer -->
+  
+  <script>
+  function SetInitialUName()
+  {
+
+	sessvars.username = 'NotLoggedIn'
+
+  }
+  
+  </script>
   
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
