--- a/KnowledgeManager_Details.html
+++ b/KnowledgeManager_Details.html
@@ -87,16 +87,16 @@ height:100%;
               <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
             </ul>
           </li>
-          <li><a href="Training.html">Training</a></li>  
+          <li><a href="Coaching.html">Coaching</a></li>  
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
-              <li><a href="#">Forums</a></li>
+              <li><a href="Forums.html">Forums</a></li>
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html">Log in</a></li>		  
+		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -341,6 +341,7 @@ height:100%;
   <script>
   function KnowDet()
   {
+  CheckUName();
   //alert('Welcome '+sessvars.kpid)
   var str = sessvars.kpid
   document.getElementById('t_descriptor').innerHTML = sessvars.kpid;
@@ -396,6 +397,20 @@ height:100%;
   }
 
   </script>
+
+  
+    <script>
+  
+  function CheckUName()
+  {
+	var curr_username = sessvars.username;
+	
+	if (curr_username != 'NotLoggedIn'){
+	
+		document.getElementById('Login').innerHTML = curr_username;
+		}
+  }
+  
   </script>
   
   <!-- jQuery Library -->
