--- a/AboutUs.html
+++ b/AboutUs.html
@@ -13,30 +13,30 @@
     <!-- superslides css -->
     <link rel="stylesheet" href="css/superslides.css">
     <!-- for content animate css file -->
-    <link rel="stylesheet" href="css/animate.css">    
+    <link rel="stylesheet" href="css/animate.css">
     <!-- slick slider css file -->
-    <link href="css/slick.css" rel="stylesheet">        
-    <!-- website theme color file -->   
-     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">    
-    <!-- main site css file -->    
-    <link href="style.css" rel="stylesheet">    
-    <!-- google fonts  -->  
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
+    <link href="css/slick.css" rel="stylesheet">
+    <!-- website theme color file -->
+     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">
+    <!-- main site css file -->
+    <link href="style.css" rel="stylesheet">
+    <!-- google fonts  -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
-	<script type="text/javascript" src="sessvars.js"></script>	
-	
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<script type="text/javascript" src="sessvars.js"></script>
+
   </head>
 <body onload="CheckUName()">
   <!-- Preloader -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
- 
-  <!-- End Preloader -->   
+
+  <!-- End Preloader -->
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-  
+
   <!-- start navbar -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -50,25 +50,36 @@
         <a class="navbar-brand">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse navbar_area">          
+      <div id="navbar" class="navbar-collapse collapse navbar_area">
         <ul class="nav navbar-nav navbar-right custom_nav">
-          <li><a href="HomePage.html">Home</a></li>
+          <li><a href="#" onclick="WhichHome()">Home</a></li>
 		  <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>
             </ul>
           </li>
-          <li><a href="Coaching.html">Coaching</a></li>  
 		  <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
+			<a data-target="Coaching.html" href="Coaching.html" class="dropdown-toggle">Coaching<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" onclick="SelDashboard()"><center>Dashboard</center></a></li>
+            </ul>
+          </li>
+		  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" >Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
               <li><a href="Forums.html">Forums</a></li>
-              <li><a href="ContactUs.html">Contact Us</a></li>               
+              <li><a href="ContactUs.html">Contact Us</a></li>
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html" id='Login'>Log in</a></li>		  
+		  <li class="dropdown">
+            <a data-target="LoginRegister.html" href="" class="dropdown-toggle" id="Login">NULL<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li id="hide1" style="display:none"><a href="UserProfile.html">User Profile</a></li>
+              <li id="hide2" style="display:none"><a onclick="RemUsername()" href="HomePage.html">Log Out</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -76,24 +87,23 @@
   <!-- End navbar -->
 <br/>
   <!-- Start Service area -->
-  <section id="service">
+  <section id="service" style="background-image:url(img/back1.jpg)">
     <div class="container">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="service_area">
-          <div class="service_title">
-            <hr>
-            <h2>SMART - <span/>About US</h2>
+          <div>
+            <h2><center><b></center></b></h2>
             <!--<p>Trusted by Fortune 500 retailers and the world’s top brands.</p>-->
           </div>
-		  
+
 		  <!-- start slider section -->
 
-            <img STYLE="WIDTH:1110px; HEIGHT:400px" src="img/slider/1.jpg" align="middle">
+            <img STYLE="WIDTH:1110px; HEIGHT:250px" src="img/slider/4.jpg" align="middle">
 
 
 
               <h2><b>Our Vision</b></h2>
-              <p><b>Vision</b><br/>
+              <p><b></b><br/>
 
 				To provide leadership in managing domain knowledge of robotic technologies for advancing productivity of advanced manufacturing industries. <br/><br/>
 
@@ -110,7 +120,7 @@
               <h2><b>About Us</b></h2>
               <p>Advancing deployment of highly sophisticated robotic technologies to sustain economic and productivity growth seems to be the order for the future. Considering that leveraging robotic technologies is as much as understanding the specific domain knowledge that is being built, the SMART platform aims to develop a scaffold for creating the ontological taxonomy of the subject matter.<br/><br/>
 
-				<b>SMART</b> proposes a structured knowledge management framework to efficiently capture, create, and transfer knowledge to users. The platform systematically scaffolds and embodies the declarative, procedural and causal knowledge of the expertise. In other words, the ontological management system emulates the cognitive structure of knowledge building – what, why, when, where and how - that is much in-line with how novices query and nurture heuristic knowledge.<br/><br/>
+				<b>SMART</b> proposes a structured knowledge management framework to efficiently capture, create, and transfer knowledge to users. The platform systematically scaffolds and embodies the declarative, procedural and causal knowledge of the expertise. In other words, the ontological management system emulates the cognitive structure of knowledge building – what, where, when, how and why - that is much in-line with how novices query and nurture heuristic knowledge.<br/><br/>
 
 				<b>SMART</b> facilitates learning to upskill the workforce to operate highly specialized robotic technologies. In fact, SMART provides experiential coaching to advance operators’ capability to manipulate and navigate the robots as well as helping novices accumulate experiences to perfect their expertise.</p>
               <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a>-->
@@ -125,7 +135,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 wow bounceInLeft">
-          <p>Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
+          <p style="font-size:20px">Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
         </div>
       </div>
     </div>
@@ -161,7 +171,7 @@
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">smart@onlysmart.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 6419 1209</span> or <a href="#">mtan@ihpc.a-star.edu.sg</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -190,7 +200,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="footer_bottom">
             <div class="copyright">
@@ -204,26 +214,64 @@
   <!-- End footer -->
 
   <script>
-  
+
   function CheckUName()
   {
 	var curr_username = sessvars.username;
-	
+
 	if (curr_username != 'NotLoggedIn'){
-	
+
 		document.getElementById('Login').innerHTML = curr_username;
+		document.getElementById('hide1').style.display = "block";
+		document.getElementById('hide2').style.display = "block";
 		}
+	else{
+	document.getElementById('Login').innerHTML = 'Log In';
+	document.getElementById('Login').href = 'LoginRegister.html';
+	}
   }
-  
+
   </script>
- 
-  
+
+   <script>
+  function RemUsername()
+  {
+	sessvars.username = 'NotLoggedIn'
+  }
+  </script>
+
+  <script>
+  function WhichHome(){
+	var curr_username = sessvars.username;
+	if (curr_username != 'NotLoggedIn'){
+		window.location.href="HomePage_AfterLogin.html"
+	}
+	else{
+		window.location.href="HomePage.html"
+	}
+  }
+  </script>
+
+    <script>
+  function SelDashboard()
+  {
+	if (sessvars.username=='Mike')
+	{
+		window.location.href="Expert_Dashboard_1.html";
+	}
+  	if (sessvars.username=='John')
+	{
+		window.location.href="Learner_Dashboard.html";
+	}
+  }
+  </script>
+
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- For content animatin  -->
   <script src="js/wow.min.js"></script>
   <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script>
   <!-- superslides slider -->
   <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.animate-enhanced.min.js"></script>
@@ -235,7 +283,7 @@
   <script src="js/jquery.ui.map.js"></script>
 
   <!-- custom js file include -->
-  <script src="js/custom.js"></script>  
-      
+  <script src="js/custom.js"></script>
+
   </body>
 </html>
