--- a/ContactUs.html
+++ b/ContactUs.html
@@ -13,33 +13,33 @@
 	<!-- superslides css -->
 	<link rel="stylesheet" href="css/superslides.css">
 	<!-- for content animate css file -->
-	<link rel="stylesheet" href="css/animate.css">    
+	<link rel="stylesheet" href="css/animate.css">
 	<!-- slick slider css file -->
-	<link href="css/slick.css" rel="stylesheet">        
-	<!-- website theme color file -->   
-	<link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">   
-	<!-- main site css file -->    
+	<link href="css/slick.css" rel="stylesheet">
+	<!-- website theme color file -->
+	<link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">
+	<!-- main site css file -->
 	<link href="style.css" rel="stylesheet">
-	<!-- google fonts  -->  
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
+	<!-- google fonts  -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<script type="text/javascript" src="/pico/client.js"></script>
 	<script>pico.load("QueFedToDB");</script>
 	<script type="text/javascript" src="sessvars.js"></script>
-	
+
 
   </head>
 <body onload="CheckUName()">
-			
+
 
   <!-- Preloader -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
- 
-  <!-- End Preloader -->   
+
+  <!-- End Preloader -->
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
 
   <!-- start navbar -->
@@ -52,41 +52,54 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">SMART <span></span></a>
+        <a class="navbar-brand" href="index.html">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse navbar_area">          
+      <div id="navbar" class="navbar-collapse collapse navbar_area">
         <ul class="nav navbar-nav navbar-right custom_nav">
-          <li><a href="HomePage.html">Home</a></li>
+		  <li><a href="#" onclick="WhichHome()">Home</a></li>
 		  <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>
             </ul>
           </li>
-          <li><a href="Coaching.html">Coaching</a></li>  
+		  <li class="dropdown">
+			<a data-target="Coaching.html" href="Coaching.html" class="dropdown-toggle">Coaching<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" onclick="SelDashboard()"><center>Dashboard</center></a></li>
+            </ul>
+          </li>
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
               <li><a href="Forums.html">Forums</a></li>
-              <li class="active"><a href="ContactUs.html">Contact Us</a></li>               
+              <li class="active"><a href="ContactUs.html">Contact Us</a></li>
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
+		  <li class="dropdown">
+            <a data-target="LoginRegister.html" href="" class="dropdown-toggle" id="Login">NULL<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li id="hide1" style="display:none"><a href="UserProfile.html">User Profile</a></li>
+              <li id="hide2" style="display:none"><a onclick="RemUsername()" href="HomePage.html">Log Out</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
   <!-- End navbar -->
-    
+
   <!-- start Contact section -->
-  <section id="contact">
+  <section id="contact" style="background-image:url(img/back1.jpg)">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <div class="contact_map">
+
           <!-- Start Google map -->
-          <div id="map_canvas"></div>
+          <div class="map_canvas">
+          <img src="img/mapsFile.jpg" style="width: 100%;height: 450px;"></img>
+          </div>
         </div>
       </div>
     </div>
@@ -103,32 +116,43 @@
                 <div class="contact_left wow fadeInLeft">
                   <!--<form id ="suppform" class="submitphoto_form">-->
                     <textarea type="text" id="name" class="form-control wpcf7-text" placeholder="Your name"></textarea>
-                    <textarea type="mail" id = "email" class="form-control wpcf7-email" placeholder="Email address"></textarea>        
+                    <textarea type="mail" id = "email" class="form-control wpcf7-email" placeholder="Email address"></textarea>
                     <textarea type="text" id = "sub" class="form-control wpcf7-text" placeholder="Subject"></textarea>
                     <textarea class="form-control wpcf7-textarea" id="desc" cols="30" rows="10" placeholder="What would you like to tell us"></textarea>
-                    <input type="submit" value="Submit" onclick = "WriteToFile()" class="wpcf7-submit photo-submit">                     
+                    <input type="submit" value="Submit" onclick = "WriteToFile()" class="wpcf7-submit photo-submit">
 
-                </div>                  
+                </div>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="contact_right wow fadeInRight">
                   <img src="img/phone_icon.png" alt="img">
                   <p>Say hello! We want to hear about what you have to say. We are open to feedback and any questions you may have.</p>
                   <address>
-                    <p><a href="mailto:smart@onlysmart.com"> smart@onlysmart.com</a></p>
-                    <p>Singapore   +65 1111 1111</p>
-                    <p>USA   +1 111 111 111</p>
+                    <p><a href="mailto:smart@onlysmart.com">mtan@ihpc.a-star.edu.sg</a></p>
+                    <p>Singapore   +65 6419 1209</p>
                   </address>
                 </div>
               </div>
-            </div>              
+            </div>
          </div>
         </div>
       </div>
     </div>
   </section>
   <!-- End Contact section -->
-      
+
+	    <!-- start special quote -->
+  <section id="specialQuote">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 wow bounceInLeft">
+          <p style="font-size:20px">Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End special quote -->
+
   <!-- start footer -->
   <footer id="footer">
     <div class="container">
@@ -158,7 +182,7 @@
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">smart@onlysmart.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 6419 1209</span> or <a href="#">mtan@ihpc.a-star.edu.sg</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -187,7 +211,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="footer_bottom">
             <div class="copyright">
@@ -207,23 +231,23 @@ function WriteToFile()
 	var email = document.getElementById('email').value;
 	var sub = document.getElementById('sub').value;
 	var desc = document.getElementById('desc').value;
-	
+
 	QueFedToDB.QueFedDB(name,email,sub,desc,function(response){
-	
+
 		if (response==1){
 			alert('Thank you. Your feedback has been successfully submitted !');
-		
+
 		}
-	
-	
-	
+
+
+
 	});
-	
+
 	document.getElementById('name').value = '';
 	document.getElementById('email').value = '';
 	document.getElementById('sub').value = '';
 	document.getElementById('desc').value = '';
-	
+
 }
 </script>
 
@@ -235,18 +259,57 @@ function WriteToFile()
 	if (curr_username != 'NotLoggedIn'){
 
 		document.getElementById('Login').innerHTML = curr_username;
+		document.getElementById('hide1').style.display = "block";
+		document.getElementById('hide2').style.display = "block";
 		}
+	else{
+	document.getElementById('Login').innerHTML = 'Log In';
+	document.getElementById('Login').href = 'LoginRegister.html';
+	}
 	}
 </script>
-  
-  
+
+   <script>
+  function RemUsername()
+  {
+	sessvars.username = 'NotLoggedIn'
+  }
+  </script>
+
+    <script>
+  function WhichHome(){
+	var curr_username = sessvars.username;
+	if (curr_username != 'NotLoggedIn'){
+		window.location.href="HomePage_AfterLogin.html"
+	}
+	else{
+		window.location.href="HomePage.html"
+	}
+  }
+  </script>
+
+    <script>
+  function SelDashboard()
+  {
+	if (sessvars.username=='Mike')
+	{
+		window.location.href="Expert_Dashboard_1.html";
+	}
+  	if (sessvars.username=='John')
+	{
+		window.location.href="Learner_Dashboard.html";
+	}
+  }
+  </script>
+
+
 <!-- jQuery Library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- For content animatin  -->
 <script src="js/wow.min.js"></script>
 <!-- bootstrap js file -->
-<script src="js/bootstrap.min.js"></script> 
+<script src="js/bootstrap.min.js"></script>
 
 <!-- superslides slider -->
 <script src="js/jquery.easing.1.3.js"></script>
@@ -254,16 +317,15 @@ function WriteToFile()
 <script src="js/jquery.superslides.min.js" type="text/javascript" charset="utf-8"></script>
 <!-- slick slider js file -->
 <script src="js/slick.min.js"></script>
-<!-- Google map -->
+<!-- Google map
 <script src="https://maps.googleapis.com/maps/api/js"></script>
-<script src="js/jquery.ui.map.js"></script>
+<script src="js/jquery.ui.map.js"></script>-->
 
 
 <!-- custom js file include -->
-<script src="js/custom.js"></script>   
-  
+<script src="js/custom.js"></script>
 </body>
-  
+
 
 
 </html>
