--- a/HomePage_AfterLogin.html
+++ b/HomePage_AfterLogin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SMART - Home</title>
-	
+
 	<script type="text/javascript" src="sessvars.js"></script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,22 +14,22 @@
     <!-- superslides css -->
     <link rel="stylesheet" href="css/superslides.css">
     <!-- for content animate css file -->
-    <link rel="stylesheet" href="css/animate.css">    
+    <link rel="stylesheet" href="css/animate.css">
     <!-- slick slider css file -->
-    <link href="css/slick.css" rel="stylesheet">        
-    <!-- website theme color file -->   
-     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">    
-    <!-- main site css file -->    
-    <link href="style.css" rel="stylesheet">    
-    <!-- google fonts  -->  
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
+    <link href="css/slick.css" rel="stylesheet">
+    <!-- website theme color file -->
+     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">
+    <!-- main site css file -->
+    <link href="style.css" rel="stylesheet">
+    <!-- google fonts  -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
-  
-	
-	
-	
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
+
+
+
   </head>
 <body onload="WelcomeMessage()">
 
@@ -37,10 +37,10 @@
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
- 
-  <!-- End Preloader -->   
+
+  <!-- End Preloader -->
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-  
+
   <!-- start navbar -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -54,31 +54,36 @@
         <a class="navbar-brand">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse navbar_area">          
+      <div id="navbar" class="navbar-collapse collapse navbar_area">
         <ul class="nav navbar-nav navbar-right custom_nav">
           <li class="active"><a href="HomePage_AfterLogin.html">Home</a></li>
 		  <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>
             </ul>
           </li>
-          <li><a href="Coaching.html">Coaching</a></li>  
+		  <li class="dropdown">
+			<a data-target="Coaching.html" href="Coaching.html" class="dropdown-toggle">Coaching<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" onclick="SelDashboard()"><center>Dashboard</center></a></li>
+            </ul>
+          </li>
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
               <li><a href="Forums.html">Forums</a></li>
-              <li><a href="ContactUs.html">Contact Us</a></li>               
+              <li><a href="ContactUs.html">Contact Us</a></li>
             </ul>
           </li>
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" id = "welmsg" data-toggle="dropdown" role="button" aria-expanded="false">NULL<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Profile Settings</a></li>
-              <li><a onclick="RemUsername()" href="HomePage.html" id="Login">Log Out</a></li>             
+              <li><a href="UserProfile.html">User Profile</a></li>
+              <li><a onclick="RemUsername()" href="HomePage.html" id="Login">Log Out</a></li>
             </ul>
-          </li>	  
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -86,7 +91,7 @@
   <!-- End navbar -->
 
   <!-- start slider section -->
-  <section id="sliderSection">            
+  <section id="sliderSection">
     <div class="mainslider_area">
       <!-- Start super slider -->
       <div id="slides">
@@ -99,8 +104,8 @@
               <p>This online learning platform will provide users an efficient knowledge management framework and also a comprehensive learning environment.</p>
               <a class="slider_btn" href="AboutUs.html">Read More</a>
             </div>
-          </li> 
-          <!-- Start single slider-->           
+          </li>
+          <!-- Start single slider-->
           <li>
             <img src="img/slider/3.jpg" alt="img">
              <div class="slider_caption">
@@ -125,18 +130,18 @@
         </nav>
       </div>
     </div>
-  </div>    
+  </div>
   </section>
   <!-- End slider section -->
 
   <!-- Start Service area -->
-  <section id="service">
+  <section id="service" style="background-image:url(img/back1.jpg); height: 450px">
     <div class="container">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="service_area">
-          <div class="service_title">
-            <hr>
-            <h2>What does SMART offer you?</h2>
+          <div>
+
+			<h2 style="color:blue"><center><b>What does SMART offer you?</center></b></h2>
 
           </div>
           <ul class="service_nav wow flipInX">
@@ -183,10 +188,10 @@
                       <!-- Set up your HTML -->
                     <div class="slick_slider">
                       <div class="single_iteam">
-                        <a href="single_page.html"> <img src="img/works_slider1.jpg" alt="img"></a>                          
+                        <a href="single_page.html"> <img src="img/works_slider1.jpg" alt="img"></a>
                       </div>
                       <div class="single_iteam">
-                        <a href="single_page.html"> <img src="img/works_slider2.jpg" alt="img"></a>                          
+                        <a href="single_page.html"> <img src="img/works_slider2.jpg" alt="img"></a>
                       </div>
                     </div>
                   </div>
@@ -200,8 +205,8 @@
                       <i class="fa fa-laptop"></i>
                     </a>
                     <div class="media-body">
-                      <h4 class="media-heading">Knowledge Management</h4>
-                      <p></p>
+                      <h4 class="media-heading">ARAMIS for Education</h4>
+                      <p><i>12 Dec 2016</i><br>GOM offers a new educational package for materials and components testing</p>
                     </div>
                   </div>
                   <!-- End single featured -->
@@ -212,8 +217,8 @@
                       <i class="fa fa-legal"></i>
                     </a>
                     <div class="media-body">
-                      <h4 class="media-heading">Intelligent Tutoring</h4>
-                      <p></p>
+                      <h4 class="media-heading">GOM Inspect Introduction Seminar</h4>
+                      <p><i>11 Nov 2016</i><br>Register now for the additional seminar on October 10, 2016, in Braunschweig (Germany)</p>
                     </div>
                   </div>
                   <!-- End single featured -->
@@ -224,12 +229,26 @@
                       <i class="fa fa-line-chart"></i>
                     </a>
                     <div class="media-body">
-                      <h4 class="media-heading">Query Resolution</h4>
-                      <p></p>
+                      <h4 class="media-heading">ATOS GOM - Webinar on 3D Scanning</h4>
+                      <p><i>05 Nov 2016</i><br>First online training for understanding all the features the ATOS GOM has to offer</p>
                     </div>
                   </div>
                   <!-- End single featured -->
-                  <a class="featured_btn" href="LoginRegister.html">Try it now for free!</a>
+
+                  <!-- single featured -->
+                  <div class="media">
+                    <a class="media-left media-middle" href="#">
+                      <i class="fa fa-legal"></i>
+                    </a>
+                    <div class="media-body">
+                      <h4 class="media-heading">Advanced Manufacturing Symposium</h4>
+                      <p><i>21 Sep 2016</i><br>Come witness the latest technologies in the advanced manufacturing sector.</p>
+                    </div>
+                  </div>
+                  <!-- End single featured -->
+
+
+                  <!--<a class="featured_btn" href="">Try it now for free!</a>-->
                 </div>
               </div>
             </div>
@@ -239,6 +258,62 @@
     </div>
   </section>
   <!-- End How it works area -->
+
+  <!-- Start Service area -->
+  <section id="service" style="background-image:url(img/back1.jpg); height: 450px">
+    <div class="container">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="service_area">
+          <ul class="service_nav wow flipInX">
+            <li>
+
+              <h2>Trending Topics</h2>
+              <p style="text-align:justify">
+                <!-- single featured -->
+                <div class="media">
+                  <a class="media-left media-middle" href="#"></a>
+                  <div class="media-body">
+                    <h4 class="media-heading">• Sticker density on Boeing motors</h4>
+                    <p><i>Number of hits: 22</i></p>
+                  </div>
+                </div>
+                <!-- End single featured -->
+
+                <!-- single featured -->
+                <div class="media">
+                  <a class="media-left media-middle" href="#">
+                  </a>
+                  <div class="media-body">
+                    <h4 class="media-heading">• ATOS 6130 Scanning Process</h4>
+                    <p><i>Number of hits: 52</i></p>
+                  </div>
+                </div>
+                <!-- End single featured -->
+
+                <!-- single featured -->
+                <div class="media">
+                  <a class="media-left media-middle" href="#"></a>
+                  <div class="media-body">
+                    <h4 class="media-heading">• GOM Inspect v7.1 changelogs</h4>
+                    <p><i>Number of hits: 12</i></p>
+                  </div>
+                </div>
+                <!-- End single featured -->
+              </p>
+              <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a> -->
+            </li>
+           <li>
+
+            <img src="img/WordCloud_Topics.JPG" alt="img" style="width:800px; height:300px">
+              <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a>-->
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Service area -->
 
   <!-- start Our Team area
   <section id="ourTeam">
@@ -327,7 +402,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 wow bounceInLeft">
-          <p>Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
+          <p style="font-size:20px">Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
         </div>
       </div>
     </div>
@@ -363,7 +438,7 @@
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 11111111</span> or <a href="#">smart@onlysmart.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 6419 1209</span> or <a href="#">mtan@ihpc.a-star.edu.sg</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -392,7 +467,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="footer_bottom">
             <div class="copyright">
@@ -404,34 +479,47 @@
     </div>
   </footer>
   <!-- End footer -->
-  
+
   <script>
   function WelcomeMessage(){
-  
+
   var username = sessvars.username
   //alert(username)
   document.getElementById('welmsg').innerHTML = username;
-  
-  
+
+
   }
-  
+
   </script>
-  
-  
+
+
   <script>
   function RemUsername()
   {
-	sessvars.username = 'NotLoggedIn'  
+	sessvars.username = 'NotLoggedIn'
   }
   </script>
-  
-  
+
+    <script>
+  function SelDashboard()
+  {
+	if (sessvars.username=='Mike')
+	{
+		window.location.href="Expert_Dashboard_1.html";
+	}
+  	if (sessvars.username=='John')
+	{
+		window.location.href="Learner_Dashboard.html";
+	}
+  }
+  </script>
+
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- For content animatin  -->
   <script src="js/wow.min.js"></script>
   <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script>
   <!-- superslides slider -->
   <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.animate-enhanced.min.js"></script>
@@ -444,6 +532,6 @@
 
   <!-- custom js file include -->
   <script src="js/custom.js"></script>
-      
+
   </body>
 </html>
