--- a/KZTree.html
+++ b/KZTree.html
@@ -12,24 +12,24 @@
     <!-- superslides css -->
     <link rel="stylesheet" href="css/superslides.css">
     <!-- for content animate css file -->
-    <link rel="stylesheet" href="css/animate.css">    
+    <link rel="stylesheet" href="css/animate.css">
     <!-- slick slider css file -->
-    <link href="css/slick.css" rel="stylesheet">        
-    <!-- website theme color file -->   
-     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">    
-    <!-- main site css file -->    
-    <link href="style.css" rel="stylesheet">    
-    <!-- google fonts  -->  
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
+    <link href="css/slick.css" rel="stylesheet">
+    <!-- website theme color file -->
+     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">
+    <!-- main site css file -->
+    <link href="style.css" rel="stylesheet">
+    <!-- google fonts  -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> 
-	
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
 	<link href="css/treestyle.css" rel="stylesheet" type="text/css">
-	
+
 	<script type="text/javascript" src="/pico/client.js"></script>
 	<script>pico.load('KnowZoneDB')</script>
-	<script type="text/javascript" src="sessvars.js"></script>	
+	<script type="text/javascript" src="sessvars.js"></script>
 </head>
 
 <body onload="CheckUName()">
@@ -37,10 +37,10 @@
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
- 
-  <!-- End Preloader -->   
+
+  <!-- End Preloader -->
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-  
+
   <!-- start navbar -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -54,47 +54,57 @@
         <a class="navbar-brand">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse navbar_area">          
+      <div id="navbar" class="navbar-collapse collapse navbar_area">
         <ul class="nav navbar-nav navbar-right custom_nav">
-          <li><a href="HomePage.html">Home</a></li>
+		  <li><a href="#" onclick="WhichHome()">Home</a></li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>
             </ul>
           </li>
-          <li><a href="Coaching.html">Coaching</a></li>  
+		  <li class="dropdown">
+			<a data-target="Coaching.html" href="Coaching.html" class="dropdown-toggle">Coaching<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" onclick="SelDashboard()"><center>Dashboard</center></a></li>
+            </ul>
+          </li>
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
               <li><a href="Forums.html">Forums</a></li>
-              <li><a href="ContactUs.html">Contact Us</a></li>               
+              <li><a href="ContactUs.html">Contact Us</a></li>
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
+		  <li class="dropdown">
+            <a data-target="LoginRegister.html" href="" class="dropdown-toggle" id="Login">NULL<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li id="hide1" style="display:none"><a href="UserProfile.html">User Profile</a></li>
+              <li id="hide2" style="display:none"><a onclick="RemUsername()" href="HomePage.html">Log Out</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
   <br/>
-  
-  <section id="service">
+
+  <section id="service" style="background-image:url(img/back1.jpg)">
     <div class="container">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="service_area">
-          <div class="service_title">
-            <hr>
-            <h2>SMART - <span/>Knowledge Zone</h2>
+          <div>
+            <h2><center><b>Knowledge Zone</center></b></h2>
             <!--<p>Trusted by Fortune 500 retailers and the world’s top brands.</p>-->
           </div>
-		  <br/><br/><br/>
-		  
+		  <br/>
+
   <!-- End navbar -->
-<img STYLE="WIDTH:1110px; HEIGHT:400px" src="img/slider/3.jpg" align="middle"><br/><br/><br/>
-<style> 
+<img STYLE="WIDTH:1110px; HEIGHT:250px" src="img/slider/4.jpg" align="middle"><br/><br/><br/>
+<style>
 .nodep {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 25px;
 cursor: pointer;
@@ -102,35 +112,35 @@ cursor: pointer;
 }
 
 .nodep1 {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 28px
 
 }
 
 .nodep2 {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 36px
 
 }
 
 .nodep3 {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 44px
 
 }
 
 .nodep4 {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 52px
 
 }
 
 .nodep5 {
-font-family: 'Open Sans', sans-serif; 
+font-family: 'Open Sans', sans-serif;
 color: #333;
 left: 60px
 
@@ -147,7 +157,7 @@ background-image: "img/slider/3.jpg"
 
 <div class ="part1" style="background-image:url(img/Ktree2.png);position:static;width:400px;height:500px;overflow-y: scroll;border:1.5px solid #223;">
 
-<div class="treelayout">  
+<div class="treelayout">
 <ul id = "tree" class="tree">
   <li class="nodep"><a onclick="liclicked(this.id)" id="Advanced Technologies"><b>Advanced Technologies</b></a>
 	<ul>
@@ -171,18 +181,18 @@ background-image: "img/slider/3.jpg"
 						<li class = "nodep5"><a onclick="liclicked(this.id)" id="Scanning"><b>Scanning</b></a></li>
 					</ul>
 				  </li>
-				  <li><a onclick="liclicked(this.id)" id="PONTOS"><b>PONTOS</b></a></li>
-				  <li><a onclick="liclicked(this.id)" id="ARAMIS"><b>ARAMIS</b></a></li>
+				  <li class = "nodep4"><a onclick="liclicked(this.id)" id="PONTOS"><b>PONTOS</b></a></li>
+				  <li class = "nodep4"><a onclick="liclicked(this.id)" id="ARAMIS"><b>ARAMIS</b></a></li>
 				</ul>
 			  </li>
-			</ul>			
+			</ul>
 		  </li>
 		  <li class="nodep2"><a onclick="liclicked(this.id)" id="Medtech"><b>Medtech</b></a></li>
 		  <li class="nodep2"><a onclick="liclicked(this.id)" id="Offshore"><b>Offshore</b></a></li>
 		  <li class="nodep2"><a onclick="liclicked(this.id)" id="Precision Engineering"><b>Precision Engineering</b></a></li>
 	</ul>
   </li>
-</li> 
+</li>
 </ul>
 
 </ul>
@@ -198,7 +208,7 @@ background-image: "img/slider/3.jpg"
 
   <div style="width:700px;height:500px;overflow-y: scroll;border:1.5px solid #223;" class="panel-body fixed-panel">
 <!--</div>-->
-<h3><b><center><a id='KZHeading'>KNOWLEDGE ZONE</a></center></b></h3>
+<h3><b><center><a id='KZHeading'>&nbsp;</a></center></b></h3>
 <center><img  id="KZHeadingImg" style="width:600px;height:200px" src="img/KnowledgeHeader.png" align="middle"></center><br>
 
 <h4><b>Description</b></h4>
@@ -213,6 +223,16 @@ In case of any issues please get in contact with the support team.
 
 <h4><b>Procedure</b></h4>
 <p style="text-align:justify" id="para2">
+The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
+
+The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
+
+In case of any issues please get in contact with the support team.
+
+</p>
+
+<h4><b>Causal</b></h4>
+<p style="text-align:justify" id="para3">
 The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
 
 The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
@@ -238,13 +258,13 @@ In case of any issues please get in contact with the support team.
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 wow bounceInLeft">
-          <p>Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
+          <p style="font-size:20px">Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
         </div>
       </div>
     </div>
   </section>
   <!-- End special quote -->
-  
+
 
     <!-- start footer -->
   <footer id="footer">
@@ -275,7 +295,7 @@ In case of any issues please get in contact with the support team.
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">smart@onlysmart.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 6419 1209</span> or <a href="#">mtan@ihpc.a-star.edu.sg</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -304,7 +324,7 @@ In case of any issues please get in contact with the support team.
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="footer_bottom">
             <div class="copyright">
@@ -321,17 +341,22 @@ In case of any issues please get in contact with the support team.
 <script>
 function liclicked(str)
 {
+	if (sessvars.prevClicked){
+	document.getElementById(sessvars.prevClicked).style.color = "#333"}
+	document.getElementById(str).style.color = "blue"
 	KnowZoneDB.KZDB(str,function(response){
 				document.getElementById('para1').innerHTML = response[0];
 				document.getElementById('para2').innerHTML = response[1];
-				document.getElementById('KZHeadingImg').src = response[2];			
+				document.getElementById('KZHeadingImg').src = response[2];
+				document.getElementById('para3').innerHTML = response[3];
 			});
-	document.getElementById('KZHeading').innerHTML = str;	
+	document.getElementById('KZHeading').innerHTML = str;
+	sessvars.prevClicked = str
 }
 
 
 </script>
-  
+
 <script>
 var tree = document.querySelectorAll('ul.tree a:not(:last-child)');
 //var eletext = document.getElementById('FirstLevel').innerHTML
@@ -366,17 +391,56 @@ for(var i = 0; i < tree.length; i++){
 	if (curr_username != 'NotLoggedIn'){
 
 		document.getElementById('Login').innerHTML = curr_username;
+		document.getElementById('hide1').style.display = "block";
+		document.getElementById('hide2').style.display = "block";
 		}
+	else{
+	document.getElementById('Login').innerHTML = 'Log In';
+	document.getElementById('Login').href = 'LoginRegister.html';
+	}
 	}
 
 </script>
-  
+
+   <script>
+  function RemUsername()
+  {
+	sessvars.username = 'NotLoggedIn'
+  }
+  </script>
+
+    <script>
+  function WhichHome(){
+	var curr_username = sessvars.username;
+	if (curr_username != 'NotLoggedIn'){
+		window.location.href="HomePage_AfterLogin.html"
+	}
+	else{
+		window.location.href="HomePage.html"
+	}
+  }
+  </script>
+
+  <script>
+  function SelDashboard()
+  {
+	if (sessvars.username=='Mike')
+	{
+		window.location.href="Expert_Dashboard_1.html";
+	}
+  	if (sessvars.username=='John')
+	{
+		window.location.href="Learner_Dashboard.html";
+	}
+  }
+  </script>
+
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- For content animatin  -->
   <script src="js/wow.min.js"></script>
   <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script>
   <!-- superslides slider -->
   <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.animate-enhanced.min.js"></script>
@@ -388,7 +452,7 @@ for(var i = 0; i < tree.length; i++){
   <script src="js/jquery.ui.map.js"></script>
 
   <!-- custom js file include -->
-  <script src="js/custom.js"></script>  
+  <script src="js/custom.js"></script>
 
 </body>
 </html>
