--- a/KnowledgeManager.html
+++ b/KnowledgeManager.html
@@ -13,19 +13,19 @@
     <!-- superslides css -->
     <link rel="stylesheet" href="css/superslides.css">
     <!-- for content animate css file -->
-    <link rel="stylesheet" href="css/animate.css">    
+    <link rel="stylesheet" href="css/animate.css">
     <!-- slick slider css file -->
-    <link href="css/slick.css" rel="stylesheet">        
-    <!-- website theme color file -->   
-     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">    
-    <!-- main site css file -->    
-    <link href="style.css" rel="stylesheet">    
-    <!-- google fonts  -->  
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>    
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
+    <link href="css/slick.css" rel="stylesheet">
+    <!-- website theme color file -->
+     <link id="switcher" href="css/themes/cyan-theme.css" rel="stylesheet">
+    <!-- main site css file -->
+    <link href="style.css" rel="stylesheet">
+    <!-- google fonts  -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
-  
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
 	  <script type="text/javascript" src="/pico/client.js"></script>
 	  <script>
 		pico.load("QueryKB");
@@ -38,10 +38,10 @@
   <div id="preloader">
     <div id="status">&nbsp;</div>
   </div>
- 
-  <!-- End Preloader -->   
+
+  <!-- End Preloader -->
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
-  
+
   <!-- start navbar -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -55,25 +55,36 @@
         <a class="navbar-brand">SMART <span>Structuring Manufacturing Architecture for Robotic Technologies</span></a>
         <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse navbar_area">          
+      <div id="navbar" class="navbar-collapse collapse navbar_area">
         <ul class="nav navbar-nav navbar-right custom_nav">
-          <li><a href="HomePage.html">Home</a></li>
+		  <li><a href="#" onclick="WhichHome()">Home</a></li>
           <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>
             </ul>
           </li>
-          <li><a href="Coaching.html">Coaching</a></li>  
+		  <li class="dropdown">
+			<a data-target="Coaching.html" href="Coaching.html" class="dropdown-toggle">Coaching<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" onclick="SelDashboard()"><center>Dashboard</center></a></li>
+            </ul>
+          </li>
 		  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
               <li><a href="Forums.html">Forums</a></li>
-              <li><a href="ContactUs.html">Contact Us</a></li>               
+              <li><a href="ContactUs.html">Contact Us</a></li>
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html" id="Login">Log in</a></li>		  
+		  <li class="dropdown">
+            <a data-target="LoginRegister.html" href="" class="dropdown-toggle" id="Login">NULL<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li id="hide1" style="display:none"><a href="UserProfile.html">User Profile</a></li>
+              <li id="hide2" style="display:none"><a onclick="RemUsername()" href="HomePage.html">Log Out</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -81,32 +92,31 @@
   <!-- End navbar -->
 <br/>
   <!-- Start Service area -->
-  <section id="service">
+  <section id="service" style="background-image:url(img/back1.jpg)">
     <div class="container">
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="service_area">
-          <div class="service_title">
-            <hr>
-            <h2><center>Knowledge Manager</center></h2>
+          <div>
+            <h2><center><b>Knowledge Manager</center></b></h2><br>
             <!--<p>Trusted by Fortune 500 retailers and the world’s top brands.</p>-->
           </div>
-		  
+
 		  <!-- start slider section -->
 
-            <img STYLE="WIDTH:1110px; HEIGHT:400px" src="img/slider/1.jpg" align="middle">
+            <img STYLE="WIDTH:1110px; HEIGHT:250px" src="img/slider/4.jpg" align="middle">
 			<table width=100% height=100%><tr><td width=50%>
 			<div>
-			<h3><b>Search Panel</b></h3> 
+			<h3><b>Search Panel</b></h3>
 			<div style = "width:500px;height:220px;border:1px solid #000;">
 			<br>
-			
-			
+
+
 			<div>
-				&nbsp;&nbsp;<input style="width:400px;" type="text" id ="searchbox" name = "searchbox" placeholder="Search"/>
+				&nbsp;&nbsp;<input style="width:400px;padding-left:0.2cm" type="text" id ="searchbox" name = "searchbox" placeholder="Search"/>
 				<input onclick="SearchKP()" type="submit"/><br>
 			</div>
-		
-			
+
+
 			<div class="dropdown">
 			<h5><b>&nbsp;&nbsp;Select your Subject Area<b></h5>
 			  &nbsp;&nbsp;<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -114,15 +124,16 @@
 				<span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+				<li><a style="cursor:pointer;" onclick="setField(this)">Subject Area</a></li>
 				<li><a style="cursor:pointer;" onclick="setField(this)">Additive Manufacturing</a></li>
 				<li><a style="cursor:pointer;" onclick="setField(this)">Advanced Materials</a></li>
 				<li><a style="cursor:pointer;" onclick="setField(this)">Digital Manufacturing</a></li>
 				<li><a style="cursor:pointer;" onclick="setField(this)">Robotics & Automation</a></li>
 			  </ul>
-			  <input type="text" id="subarea" style="width:340px;height:33px;" class="field left" value="Subject Area" readonly></input>
+			  <input type="text" id="subarea" style="width:340px;height:33px;padding-left:0.2cm" class="field left" value="Subject Area" readonly></input>
 			</div>
-			
-			
+
+
 			<div class="dropdown">
 			<h5><b>&nbsp;&nbsp;Select the sub-category<b></h5>
 			  &nbsp;&nbsp;<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -130,28 +141,29 @@
 				<span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+				<li><a style="cursor:pointer;" onclick="setField_1(this)">Sub-Category</a></li>
 				<li><a style="cursor:pointer;" onclick="setField_1(this)">Aerospace</a></li>
 				<li><a style="cursor:pointer;" onclick="setField_1(this)">Biology & Pharmaceuticals</a></li>
 				<li><a style="cursor:pointer;" onclick="setField_1(this)">Chemicals & Engineering</a></li>
 				<li><a style="cursor:pointer;" onclick="setField_1(this)">Electronics</a></li>
 				<li><a style="cursor:pointer;" onclick="setField_1(this)">Machinery & Systems</a></li>
 			  </ul>
-			  <input type="text" id="subcat" style="width:333px;height:33px;" class="field left" value="Sub-Category" readonly></input>
+			  <input type="text" id="subcat" style="width:333px;height:33px;padding-left:0.2cm" class="field left" value="Sub-Category" readonly></input>
 			</div>
-			
+
 			</div>
 			</div>
 			</td>
 
 			<td width=50%>
-			<h3><b>Search Results</b></h3> 
-			<div style="position:static;width:600px;height:220px;border:1.5px solid #223;">
+			<h3><b>Search Results</b></h3>
+			<div style="position:static;width:600px;height:220px;border:1.5px solid #223;padding-right:0.2cm">
 			<br>
-			<p id="searchrestitle"><b>&nbsp;&nbsp;Your search results will be populated here<b></p>
-			<p><a id="searchitem1" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem2" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem3" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem4" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
+			<p id="searchrestitle" style="padding-right:0.2cm"><b>&nbsp;&nbsp;Your search results will be populated here<b></p>
+			<p style="padding-right:0.2cm"><a id="searchitem1" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
+			<p style="padding-right:0.2cm"><a id="searchitem2" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
+			<p style="padding-right:0.2cm"><a id="searchitem3" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
+			<p style="padding-right:0.2cm"><a id="searchitem4" onclick="KnwLmgDetails(this.id)">&nbsp;</a></p>
 			</td></tr></table>
 
               <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a>-->
@@ -166,14 +178,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 wow bounceInLeft">
-          <p>Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
+          <p style="font-size:20px">Pairing substantial savings in time and money with the ease and reliability of doing it in-house, ever since… we invented it</p>
         </div>
       </div>
     </div>
   </section>
   <!-- End special quote -->
 
-  
+
     <!-- start footer -->
   <footer id="footer">
     <div class="container">
@@ -203,7 +215,7 @@
                 </div>
                 <div class="single_footer_top contact_mail">
                   <h2>Contact us</h2>
-                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+1 888-522-0212</span> or <a href="#">smart@onlysmart.com</a></p>
+                  <p>We are always open for a quick chat! Give us a call or email us any time and we will respond shortly. <span>+65 6419 1209</span> or <a href="#">mtan@ihpc.a-star.edu.sg</a></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
@@ -232,7 +244,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="footer_bottom">
             <div class="copyright">
@@ -244,36 +256,36 @@
     </div>
   </footer>
   <!-- End footer -->
-  
+
   <script>
   function KnwLmgDetails(DetID)
   {
 		var curr_val = document.getElementById(DetID).innerHTML
 		var curr_val = curr_val.replace(/&amp;/g, '&');
 		sessvars.kpid = curr_val;
-		window.location.href = "KnowledgeManager_Details.html";  
+		window.location.href = "KnowledgeManager_Details.html";
   }
 
   </script>
-  
-  
-  
+
+
+
   <script>
   function setField(link){
   var cur_pressed = link.innerHTML
   var cur_pressed = cur_pressed.replace(/&amp;/g, '&');
-  document.getElementById('subarea').value = cur_pressed  
+  document.getElementById('subarea').value = cur_pressed
   }
   </script>
-  
+
   <script>
   function setField_1(link){
   var cur_pressed_1 = link.innerHTML
   var cur_pressed_1 = cur_pressed_1.replace(/&amp;/g, '&');
-  document.getElementById('subcat').value = cur_pressed_1  
+  document.getElementById('subcat').value = cur_pressed_1
   }
   </script>
-  
+
   <script>
   function SearchKP()
   {
@@ -281,54 +293,96 @@
 		document.getElementById("searchitem2").innerHTML = ""
 		document.getElementById("searchitem3").innerHTML = ""
 		document.getElementById("searchitem4").innerHTML = ""
-		
+
 		var searchq = document.getElementById("searchbox").value
 		var subarea = document.getElementById("subarea").value
 		var subcat = document.getElementById("subcat").value
 		var subarea = subarea.replace(/&amp;/g, '&');
 		var subcat = subcat.replace(/&amp;/g, '&');
-		
+
 		if (searchq == null || searchq == "")
 		{
 			alert("Please enter keywords in the search field.")
 			return false;
 		}
-		
+
 		QueryKB.QuerySearch(searchq,subarea,subcat,function(response){
 			    for (var i = 1; i < 5; i++) {
 					if (response[response.length - i])
 						document.getElementById("searchitem" + i).innerHTML = response[response.length - i];
 						document.getElementById("searchitem" + i).href = "KnowledgeManager_Details.html";
-				}	
+            document.getElementById("searchitem" + i).style.padding = "0px 0px 0px 0.2cm"
+				}
 
 		if (response.length==0)
-		{document.getElementById("searchrestitle").innerHTML = " No results found"}
+		{document.getElementById("searchrestitle").innerHTML = " No results found"
+    document.getElementById("searchrestitle").style.padding = "0px 0px 0px 0.2cm"}
 		else{
 		document.getElementById("searchrestitle").innerHTML = " The following results have been obtained from the search query:"}
-		});	
+    document.getElementById("searchrestitle").style.padding = "0px 0px 0px 0.2cm"
+		});
   }
   </script>
-  
+
     <script>
-  
+
   function CheckUName()
   {
 	var curr_username = sessvars.username;
-	
+
 	if (curr_username != 'NotLoggedIn'){
-	
+
 		document.getElementById('Login').innerHTML = curr_username;
+		document.getElementById('hide1').style.display = "block";
+		document.getElementById('hide2').style.display = "block";
 		}
+	else{
+	document.getElementById('Login').innerHTML = 'Log In';
+	document.getElementById('Login').href = 'LoginRegister.html';
+	}
   }
-  
+
   </script>
-  
+
+     <script>
+  function RemUsername()
+  {
+	sessvars.username = 'NotLoggedIn'
+  }
+  </script>
+
+    <script>
+  function WhichHome(){
+	var curr_username = sessvars.username;
+	if (curr_username != 'NotLoggedIn'){
+		window.location.href="HomePage_AfterLogin.html"
+	}
+	else{
+		window.location.href="HomePage.html"
+	}
+  }
+  </script>
+
+    <script>
+  function SelDashboard()
+  {
+	if (sessvars.username=='Mike')
+	{
+		window.location.href="Expert_Dashboard_1.html";
+	}
+  	if (sessvars.username=='John')
+	{
+		window.location.href="Learner_Dashboard.html";
+	}
+  }
+  </script>
+
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- For content animatin  -->
   <script src="js/wow.min.js"></script>
   <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script>
   <!-- superslides slider -->
   <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.animate-enhanced.min.js"></script>
@@ -340,7 +394,7 @@
   <script src="js/jquery.ui.map.js"></script>
 
   <!-- custom js file include -->
-  <script src="js/custom.js"></script>  
-      
+  <script src="js/custom.js"></script>
+
   </body>
 </html>
